Submitted the manuscript to ELSS editing service

--- a/scripts/BVOC_pre_processing_16S.Rmd
+++ b/scripts/BVOC_pre_processing_16S.Rmd
@@ -98,17 +98,19 @@ p_BVOC <- p_BVOC + theme(axis.title.x = element_blank(),
                          legend.key.size = unit(3, "mm"))
 show(p_BVOC)
 
-ggsave(plot = p_BVOC, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC.png"), 
-       dpi = 400, width = 150, height = 80, units = "mm")
+#ggsave(plot = p_BVOC, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC.png"), 
+#       dpi = 400, width = 150, height = 80, units = "mm")
 ```
 
 #log_transform
 
 ```{r}
 BVOC_2306_log <- BVOC_2306 + 0.01
+MT_2306_log <- apply(BVOC_2306_log[, 1:12], 1, sum)
+MT_2306_log <- log(MT_2306_log, base = 10)
 BVOC_2306_total_log <- log(rowSums(BVOC_2306_log), base = 10)
 BVOC_2306_log <- log(BVOC_2306_log, base = 10)
 
-save(BVOC_2306_total_log, BVOC_2306_log, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/BVOC_2306_16S_log.Rdata"))
+save(BVOC_2306_total_log, MT_2306_log, BVOC_2306_log, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/BVOC_2306_16S_log.Rdata"))
 ```
 
