--- a/scripts/Map_population.Rmd
+++ b/scripts/Map_population.Rmd
@@ -12,6 +12,8 @@ library(tidyverse)
 library(sf)
 library(rnaturalearth)
 library(rnaturalearthdata)
+library(gt)
+library(webshot2)
 ```
 
 #path to raw-data directory (change "path" to your raw-data directory)
@@ -29,16 +31,24 @@ source("../scripts/path.R")
 #source("../R/bestNMDS.R")
 ```
 
+##theme settings
+
+```{r}
+theme_pt <-theme(axis.title = element_text(size = 7),
+                 axis.text = element_text(size = 7),
+                 axis.line = element_line(linewidth = 0.2))
+```
+
 #read processed data
 
 ```{r import}
 location <- read_excel(paste0(path_out, "/data/Sugi/metadata_2306.xlsx"), sheet = "location")
 
 #position of site name in the map
-location$Label_X <- c(147.5, 147, 148, 147.5, 143, 130, 124, 136, 125, 124, 130.5, 137, 134, 145.5)
-location$Label_Y <- c(41.5, 40, 38.5, 36.5, 30, 40.5, 40, 30, 36, 34, 27.5, 45, 43, 32)
-location$tip_X <- c(-2.8, -2.5, -3.3, -3, -0.5, 0, 1.8, 0, 2.8, 2.3, 0, 0, 0, -0.5)
-location$tip_Y <- c(0, 0, 0, 0, 0.5, -0.5, 0, 0.5, 0, 0, 0.5, -0.5, -0.5, 0.5)
+location$Label_X <- c(147.5, 147, 137.5, 147.5, 143, 130, 124, 136, 125, 124, 130.5, 134, 131.5, 145.5)
+location$Label_Y <- c(41.5, 40, 44, 36.5, 30, 40.5, 40, 30, 36, 34, 27.5, 43, 42, 32)
+location$tip_X <- c(-2.8, -2.5, 0, -3, -0.5, 0, 1.8, 0, 2.8, 2.3, 0, 0, 0, -0.5)
+location$tip_Y <- c(0, 0, -0.5, 0, 0.5, -0.5, 0, 0.5, 0, 0, 0.5, -0.5, -0.5, 0.5)
 
 garden <- read_excel(paste0(path_out, "/data/Sugi/metadata_2306.xlsx"), sheet = "common_garden")
 garden$site <- as.factor(garden$site)
@@ -65,17 +75,34 @@ map <- ggplot(data = japan) +
   # Add labels at specified positions
   geom_text(data = location,
             aes(x = Label_X, y = Label_Y, label = paste0(fullname, "(", population, ")")),
-            size = 3) +
+            size = 7 * .352777778) +
   
   coord_sf(xlim = c(120, 156), # Extended map boundaries to accommodate labels
           ylim = c(25, 46), 
           expand = FALSE) +
   xlab("Longitude") + ylab("Latitude") +
-  theme_classic()
+  theme_classic() + theme_pt
 
 show(map)
 # Save the map (optional)
 ggsave(plot = map, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/population_map.png"), 
-       width = 150, height = 120, units = "mm", dpi = 350)
+       width = 160, height = 130, units = "mm", dpi = 300)
+```
+
+#location table
+
+```{r}
+location_tbl <- location %>%
+  select(c("Population" = fullname,
+           "Abbreviation" = population,
+           "Latitude (N°)" = latitude,
+           "Longitude (E°)" = longitude,
+           "Elevation (m)" = altitude)) %>%
+  gt::gt() %>%
+  tab_style(cell_text(weight = "bold"), locations = cells_column_labels(columns = everything()))
+
+show(location_tbl)
+
+gtsave(location_tbl, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/export/location_pop.png"))
 ```
 
