--- a/scripts/NMDS_plot.Rmd
+++ b/scripts/NMDS_plot.Rmd
@@ -11,9 +11,8 @@ library(readxl)
 library(phyloseq)
 library(tidyverse)
 library(vegan)
-library(gridExtra)
-library(grid)
-library(gtable)
+library(ggpubr)
+library(ggnewscale)
 ```
 
 #path to raw-data directory (change "path" to your raw-data directory)
@@ -49,14 +48,6 @@ load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/trees.R
 tree16S <- tree2
 tree16S_rarefied <- tree_rarefied2
 rm(list = c("tree2", "tree_rarefied2"))
-
-#metadata
-metadata <- read_excel(paste0(path_out, "/data/Sugi/metadata_2306.xlsx"), sheet = "Sheet1")
-metadata <- column_to_rownames(metadata, var = "Sample_Name")
-metadata$cloneID <- as.factor(metadata$cloneID)
-metadata$population <- as.factor(metadata$population)
-metadata$site <- as.factor(metadata$site)
-metadata$date <- as.factor(metadata$date)
 
 #load nmds output
 load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/NMDS_bray_16S.Rdata"))
@@ -103,6 +94,32 @@ nmds_ITS_unUF <- nmds_unUF
 rm(nmds_unUF)
 ```
 
+##metadata
+
+```{r}
+#metadata
+metadata <- read_excel(paste0(path_out, "/data/Sugi/metadata_2306.xlsx"), sheet = "Sheet1")
+metadata <- column_to_rownames(metadata, var = "Sample_Name")
+metadata$cloneID <- as.factor(metadata$cloneID)
+metadata$population <- as.factor(metadata$population)
+metadata$site <- as.factor(metadata$site)
+metadata$date <- as.factor(metadata$date)
+
+#population metadata
+meta_pop <- read_excel(paste0(path_out, "/data/Sugi/metadata_2306.xlsx"), sheet = "location")
+
+#result of PCA on climatic variables
+load(paste0(path_out, "/data/Sugi/pca_climate.Rdata"))
+df_pcaclim <- data.frame(pca_clim$x)
+colnames(df_pcaclim) <- paste0(colnames(df_pcaclim), "_clim")
+
+#merge population metadata and PCA result
+meta_pop <- cbind(meta_pop, df_pcaclim)
+
+metadata$PC1 <- meta_pop$PC1_clim[sapply(metadata$fullname, charmatch, meta_pop$fullname)]
+metadata$PC2 <- meta_pop$PC2_clim[sapply(metadata$fullname, charmatch, meta_pop$fullname)]
+```
+
 #phyloseq object
 
 ```{r phyloseq}
@@ -117,64 +134,75 @@ ps_ITS <- phyloseq(otu_table(df_ITS, taxa_are_rows = FALSE),
                sample_data(metadata))
 ```
 
+#theme_settings
+
+```{r}
+#theme settings
+theme_pt <-theme(axis.title = element_text(size = 7),
+                 axis.text = element_text(size = 7),
+                 axis.line = element_line(linewidth = 0.2), 
+                 
+                 legend.title = element_text(size = 7), 
+                 legend.text = element_text(size = 6), 
+                 legend.key.size = unit(10, "pt"), 
+                 legend.spacing.x = unit(0, "mm"), 
+                 NULL)
+```
+
 #Bray
-##population_metadata
-
-```{r}
-#filter population data only
-popmeta <- metadata %>% 
-  select(population, fullname, latitude, longitude, altitude_min, altitude_max) %>% 
-  group_by(population) %>% 
-  summarize(population = first(population), 
-            fullname = first(fullname), 
-            latitude = first(latitude), 
-            longitude = first(longitude), 
-            alt_min = first(altitude_min), 
-            alt_max = first(altitude_max))
-
-#assign numbers to populations in ascending order with respect to latitude
-replace_rule <- 1:nrow(popmeta)
-names(replace_rule) <- as.character(popmeta$population[sapply(sort(popmeta$latitude), 
-                                                              grep, popmeta$latitude)])
-```
-
-##assign colors to samples in latitude-ascending order
-
-```{r}
-#assigned number for each sample
-pop_num <- as.character(metadata$population)
-pop_num <- unlist(lapply(pop_num, function(x) replace_rule[x]))
-#set (site * population) levels
-fac_sipop <- as.factor(paste0(metadata$site, LETTERS[pop_num]))
-#assign colors to each element
-#decrease transparency with increasing latitude
-col_sipop <- c(alpha("blue", seq(0.2, 1, length.out = length(replace_rule))), 
-               alpha("orange3", seq(0.2, 1, length.out = length(replace_rule)))
-               )
-```
 
 ##16S
 
 ```{r}
 df_nmds_16S <- data.frame(metadata, nmds_16S$nmds$points)
 
-p_16S <- ggplot(data = df_nmds_16S, 
-                 mapping = aes(x = MDS1, y = MDS2, color = fac_sipop))
-p_16S <- p_16S + theme_classic()
-p_16S <- p_16S + coord_fixed(1)
-p_16S <- p_16S + xlim(-2, 2) + ylim(-2, 2)
-p_16S <- p_16S + scale_color_manual(values = col_sipop)
-p_16S <- p_16S + geom_point()
+p_16S <- ggplot() +
+  geom_point(data = df_nmds_16S[df_nmds_16S$site == "Tsukuba", ], 
+             mapping = aes(x = MDS1, y = MDS2, color = PC1)) +
+  scale_color_continuous(low = "#ffa50040", high = "#ffa500FF") +
+  labs(color = "Climatic PC1") +
+  new_scale_color() +
+  geom_point(data = df_nmds_16S[df_nmds_16S$site == "Kawatabi", ], 
+             mapping = aes(x = MDS1, y = MDS2, color = PC1)) +
+  scale_color_continuous(low = "#19197040", high = "#191970FF") +
+  labs(color = "Climatic PC1") +
+  
+  #theme and plot range
+  theme_classic() + theme_pt +
+  coord_fixed(1) +
+  xlim(-2, 2) + ylim(-2, 2) +
+  
+  #stress value
+  annotate("text", 
+           x = 1.35, y = -2, size = 7 * .352777778, 
+           label = paste0("Stress = ", 
+                          round(nmds_16S$nmds$stress, digits = 4)))
 
-p_16S <- p_16S + annotate("text", 
-                          x = 1.35, y = -2,
-                          label = paste0("Stress = ", 
-                                         round(nmds_16S$nmds$stress, digits = 4)))
-p_16S <- p_16S + theme(legend.position = "none")
+show(p_16S)
 
 ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/NMDS_bray_wide.png"), 
        plot = p_16S, 
-       dpi = 400, width = 150, height = 150, units = "mm")
+       dpi = 300, width = 160, height = 160, units = "mm")
+```
+
+```{r, echo=FALSE}
+p_16S <- ggplot(data = df_nmds_16S, 
+                 mapping = aes(x = MDS1, y = MDS2, color = clade)) +
+  theme_classic() +
+  coord_fixed(1) +
+  xlim(-2, 2) + ylim(-2, 2) +
+  geom_point() +
+  scale_color_viridis_d() +
+  theme_pt + labs(color = "Clade") +
+  annotate("text", 
+           x = 1.35, y = -2, size = 7 * .352777778, 
+           label = paste0("Stress = ", 
+                          round(nmds_16S$nmds$stress, digits = 4)))
+
+p_16S
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/NMDS_bray_clade.png"), 
+       plot = p_16S, 
+       dpi = 300, width = 160, height = 160, units = "mm")
 ```
 
 ###envfit(ASV)
@@ -203,6 +231,7 @@ p_16S_ASV <- p_16S_ASV + xlim(-2, 2) + ylim(-2, 2)
 p_16S_ASV <- p_16S_ASV + scale_color_manual(values = col_sipop)
 p_16S_ASV <- p_16S_ASV + geom_point()
 p_16S_ASV <- p_16S_ASV + theme(legend.position = "none")
+p_16S_ASV <- p_16S_ASV + theme_pt
 
 #show bacterial abundance arrows(only significantly correlated)
 p_16S_ASV <- p_16S_ASV + geom_segment(data = signif_16S,
@@ -211,16 +240,16 @@ p_16S_ASV <- p_16S_ASV + geom_segment(data = signif_16S,
                                       color = signif_16S$arr_col) +
   geom_text(data = signif_16S,  
             aes(x = NMDS1 * 1.5, y = NMDS2 * 1.5, label = Phylum), 
-            color = "black") 
+            size = 7 * .352777778, color = "black")
 
 #stress value
-p_16S_ASV <- p_16S_ASV + annotate("text", x = 1.35, y = -2,
+p_16S_ASV <- p_16S_ASV + annotate("text", x = 1.35, y = -2, size = 7 * .352777778, 
                                   label = paste0("Stress = ", 
                                                  round(nmds_16S$nmds$stress, digits = 4)))
 
 ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/NMDS_bray_ASV.png"), 
        plot = p_16S_ASV, 
-       dpi = 400, width = 150, height = 150, units = "mm")
+       dpi = 300, width = 160, height = 160, units = "mm")
 ```
 
 ##ITS
@@ -228,24 +257,54 @@ ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/N
 ```{r}
 df_nmds_ITS <- data.frame(metadata, nmds_ITS$nmds$points)
 
-p_ITS <- ggplot(data = df_nmds_ITS, 
-                 mapping = aes(x = MDS1, y = MDS2, color = fac_sipop))
-p_ITS <- p_ITS + theme_classic()
-p_ITS <- p_ITS + coord_fixed(1)
-p_ITS <- p_ITS + xlim(-2.5, 2) + ylim(-2, 2.5)
-p_ITS <- p_ITS + scale_color_manual(values = col_sipop)
-p_ITS <- p_ITS + geom_point()
-p_ITS <- p_ITS + theme(legend.position = "none")
+p_ITS <- ggplot() +
+  geom_point(data = df_nmds_ITS[df_nmds_ITS$site == "Tsukuba", ], 
+             mapping = aes(x = MDS1, y = MDS2, color = PC1)) +
+  scale_color_continuous(low = "#ffa50040", high = "#ffa500FF") +
+  labs(color = "Climatic PC1") +
+  new_scale_color() +
+  geom_point(data = df_nmds_ITS[df_nmds_ITS$site == "Kawatabi", ], 
+             mapping = aes(x = MDS1, y = MDS2, color = PC1)) +
+  scale_color_continuous(low = "#19197040", high = "#191970FF") +
+  labs(color = "Climatic PC1") +
+  
+  #theme and plot range
+  theme_classic() + theme_pt +
+  coord_fixed(1) +
+  xlim(-2.5, 2) + ylim(-2, 2.5) +
+  
+  #stress
+  annotate("text", 
+           x = 1.5, y = -2, size = 7 * .352777778, 
+           label = paste0("Stress = ", 
+                          round(nmds_ITS$nmds$stress, digits = 4)))
 
-#stress
-p_ITS <- p_ITS + annotate("text", 
-                          x = 1.5, y = -2,
-                          label = paste0("Stress = ", 
-                                         round(nmds_ITS$nmds$stress, digits = 4)))
+show(p_ITS)
 
 ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/NMDS_bray_wide.png"), 
        plot = p_ITS, 
-       dpi = 400, width = 150, height = 150, units = "mm")
+       dpi = 300, width = 160, height = 160, units = "mm")
+```
+
+```{r, echo=FALSE}
+p_ITS <- ggplot(data = df_nmds_ITS, 
+                 mapping = aes(x = MDS1, y = MDS2, color = clade)) +
+  theme_classic() + theme_pt +
+  coord_fixed(1) +
+  xlim(-2.5, 2) + ylim(-2, 2.5) +
+  scale_color_viridis_d() +
+  geom_point() + labs(color = "Clade") +
+  
+  #stress
+  annotate("text", 
+           x = 1.5, y = -2, size = 7 * .352777778, 
+           label = paste0("Stress = ", 
+                          round(nmds_ITS$nmds$stress, digits = 4)))
+p_ITS
+
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/NMDS_bray_clade.png"), 
+       plot = p_ITS, 
+       dpi = 300, width = 160, height = 160, units = "mm")
 ```
 
 ###envfit(ASV)
@@ -275,6 +334,7 @@ p_ITS_ASV <- p_ITS_ASV + coord_fixed(1)
 p_ITS_ASV <- p_ITS_ASV + xlim(-2.5, 2) + ylim(-2, 2.5)
 p_ITS_ASV <- p_ITS_ASV + scale_color_manual(values = col_sipop)
 p_ITS_ASV <- p_ITS_ASV + geom_point()
+p_ITS_ASV <- p_ITS_ASV + theme_pt
 
 p_ITS_ASV <- p_ITS_ASV + theme(legend.position = "none")
 
@@ -283,20 +343,19 @@ p_ITS_ASV  <- p_ITS_ASV + geom_segment(data = signif_ITS,
                                        aes(x = 0, xend = NMDS1 * 1.5, y = 0, yend = NMDS2 * 1.5),
                                        arrow = arrow(length = unit(2.5, "mm")), 
                                        color = signif_ITS$arr_col) +
-  geom_text(data = signif_ITS,  
+  geom_text(data = signif_ITS, 
             aes(x = NMDS1 * 1.5, y = NMDS2 * 1.5, label = Class),
-            #size = 4, 
-            color = "black")
+            size = 7 * .352777778, color = "black")
 
 #stress value
 p_ITS_ASV <- p_ITS_ASV + annotate("text", 
-                                  x = 1.5, y = -2,
+                                  x = 1.5, y = -2, size = 7 * .352777778, 
                                   label = paste0("Stress = ",
                                                  round(nmds_ITS$nmds$stress, digits = 4)))
 
 ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/NMDS_bray_ASV.png"), 
        plot = p_ITS_ASV, 
-       dpi = 400, width = 150, height = 150, units = "mm")
+       dpi = 300, width = 160, height = 160, units = "mm")
 ```
 
 ##legend
@@ -324,19 +383,19 @@ ggsave(grid.arrange(legend),
 ##layout two plots
 
 ```{r}
-p_16S_label <- arrangeGrob(p_16S, top = create_label("a"))
-p_ITS_label <- arrangeGrob(p_ITS, top = create_label("b"))
-
-p_two_bray <- grid.arrange(p_16S_label, p_ITS_label, nrow = 1)
+p_two_bray <- ggarrange(p_16S, p_ITS, nrow = 1, ncol = 2, 
+                        common.legend = TRUE, 
+                        legend = "bottom", 
+                        labels = letters[1:2], 
+                        font.label = list(size = 7, color = "black", face = "bold"))
 ggsave(p_two_bray, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/NMDS_bray_both.png"), 
-       dpi = 400, width = 150, height = 75, units = "mm", scale = 2)
+       dpi = 300, width = 160, height = 80, units = "mm", scale = 1)
 
-p_16S_ASV_label <- arrangeGrob(p_16S_ASV, top = create_label("a"))
-p_ITS_ASV_label <- arrangeGrob(p_ITS_ASV, top = create_label("b"))
-
-p_two_bray_ASV <- grid.arrange(p_16S_ASV_label, p_ITS_ASV_label, nrow = 1)
+p_two_bray_ASV <- ggarrange(p_16S_ASV, p_ITS_ASV, nrow = 1, ncol = 2, 
+                            labels = letters[1:2], 
+                            font.label = list(size = 7, color = "black", face = "bold"))
 ggsave(p_two_bray_ASV, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/NMDS_bray_both_ASV.png"), 
-       dpi = 400, width = 150, height = 75, units = "mm", scale = 2)
+       dpi = 400, width = 160, height = 80, units = "mm", scale = 1)
 ```
 
 #UniFrac
@@ -390,7 +449,7 @@ p_ITSUF_label <- arrangeGrob(p_ITS_UF, top = create_label("b"))
 
 p_two_UF <- grid.arrange(p_16SUF_label, p_ITSUF_label, nrow = 1)
 ggsave(p_two_UF, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/NMDS_UF_both.png"), 
-       dpi = 400, width = 150, height = 75, units = "mm", scale = 2)
+       dpi = 400, width = 150, height = 75, units = "mm", scale = 1)
 ```
 
 #unweighted UF
