--- a/scripts/statistics_comparison.Rmd
+++ b/scripts/statistics_comparison.Rmd
@@ -69,7 +69,7 @@ meta_pop <- cbind(meta_pop, df_pcaclim)
 
 #add climatic data
 metadata <- metadata %>%
-  select(-c(fullname, latitude, longitude, altitude)) %>%
+  dplyr::select(-c(fullname, latitude, longitude, altitude, Clade)) %>%
   left_join(meta_pop, by = "population")
 rownames(metadata) <- formatC(as.numeric(rownames(metadata)), width = 4, flag = "0")
 ```
@@ -96,16 +96,6 @@ load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/trees.R
 treeITS <- tree2
 treeITS_rarefied <- tree_rarefied2
 rm(list = c("tree2", "tree_rarefied2"))
-```
-
-#multicollinearity
-
-```{r}
-#test multicollinearity between PCs of climatic data before analysis
-lm_clim1 <- lm(PC1_clim ~ PC2_clim, data = metadata)
-r2_clim1 <- summary(lm_clim1)$r.squared
-
-1 / (1 - r2_clim1)
 ```
 
 #phyloseq_object
